# iching-xiaozhi-card

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
cmake/: xiaozhi_claw_root.cmake
main/: CMakeLists.txt  board_hal.cc  board_hal.h  dayan_app.cc  dayan_app.h  dayan_data.cc  dayan_data.h  dayan_engine.cc  dayan_engine.h  dayan_ui.cc  dayan_ui.h  font_full_16.c  font_iching_16.c  font_iching_patch_16_1.c  idf_component.yml  main.cc  shutdown_image.c
tools/: analyze_font.py  check_font_coverage.py  extract_gua_text.py  font_symbols.txt  gen_iching_data.py  gen_iching_data_from_pip.py  gen_missing_font.ps1  gen_shutdown_image.py  missing_chars.txt
