idf_component_register(
    SRCS
        "main.cc"
        "board_hal.cc"
        "dayan_app.cc"
        "dayan_ui.cc"
        "dayan_engine.cc"
        "dayan_data.cc"
        "font_iching_patch_16_1.c"
        "c:/Users/william/cursorproject/claw-card/xiaozhi-claw/components/guage_bq27220/bq27220.cpp"
        "c:/Users/william/cursorproject/claw-card/xiaozhi-claw/components/xiaozhi-fonts/src/font_puhui_16_1.c"
        "c:/Users/william/cursorproject/claw-card/xiaozhi-claw/components/xiaozhi-fonts/src/font_awesome_16_4.c"
    INCLUDE_DIRS "."
    "c:/Users/william/cursorproject/claw-card/xiaozhi-claw/components/guage_bq27220/include"
    "c:/Users/william/cursorproject/claw-card/xiaozhi-claw/components/xiaozhi-fonts/include"
)
